@@ -6,9 +6,14 @@ CHANGES
 
 - Added `player.layout` renderer
 
-- Added `-c` argument to `player` console script, it allows to customize templates
+- Added `-c` argument to `player` console script, 
+  it allows to customize templates
 
 - `set_layout_data` accepts keyword arguments
+
+- Removed `player.wrap_layout()`
+
+- Removed python2.6 support
 
 
 0.3 (11-07-2012)
